--- a/application/plugins/if.upload/css.css
+++ b/application/plugins/if.upload/css.css
@@ -4,10 +4,17 @@
 }
 
 #if-upload-image-loader{
+	
+}
+.if-loading{
 	background: transparent url(img/2d_1.gif)
 		no-repeat 50% 50%;
 	height: 100%;
 	min-height: 40px;
+}
+.if-upload-image-new{
+	height: 155px;
+	width: 155px;
 }
 
 
@@ -31,3 +38,27 @@
     z-index:2;
 }
 
+.fileUpload {
+	position: relative;
+	overflow: hidden;
+	background: transparent url(img/upload.png)
+		no-repeat 50% 50%;
+	height: 155px;
+	width: 155px;
+}
+.fileUpload input.upload {
+	position: absolute;
+	top: 0;
+
+
+	padding: 0;
+	font-size: 20px;
+	cursor: pointer;
+	opacity: 0;
+	filter: alpha(opacity=0);
+	width: 150px;
+	height: 100%;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+}
