--- a/application/templates/tmpl1/css/app.css
+++ b/application/templates/tmpl1/css/app.css
@@ -1,10 +1,3 @@
-/* 
-    Document   : app
-    Created on : 08/01/2014, 10:27:46 PM
-    Author     : Jesus
-    Description:
-        Purpose of the stylesheet follows.
-*/
 
 #navbar .container, #canvas.container{ width: 100%; }
 #canvas.container{
@@ -16,3 +9,9 @@
 }
 
 
+//-----------------------------------------------------------------
+//LOADING
+//-----------------------------------------------------------------
+.loading{
+	background: #fff url('../img/loading.gif');
+}
