--- a/application/templates/tmpl1/css/login.css
+++ b/application/templates/tmpl1/css/login.css
@@ -1,10 +1,3 @@
-/* 
-    Document   : login
-    Created on : 09/01/2014, 09:51:21 AM
-    Author     : Jesus
-    Description:
-        Purpose of the stylesheet follows.
-*/
 
 body {
 	
@@ -12,6 +5,8 @@ body {
 
 #wrapper-login{
 	width: 350px;
+	height: auto;
+	min-height: 30px;
 	margin-top: 20px;
 	margin-bottom: 30px;
 }
@@ -19,4 +14,11 @@ body {
 #footer{
 	font-size: .8em;
 	color: lightgray;
+}
+
+/*****************************************************/
+/*LOADING*/
+/*****************************************************/
+.loading{
+	background: #fff url('../img/loading.gif') no-repeat 50% 50% !important;
 }
