--- a/application/plugins/if.upload/css.css
+++ b/application/plugins/if.upload/css.css
@@ -1,83 +1,30 @@
- 
-
-#if-upload-output{
-	width: 100%;
-	height: 100px;
-}
-
-#if-upload-image-loader{
-	
-}
-.if-loading{
-	background: transparent url(img/2d_1.gif)
-		no-repeat 50% 50%;
-	height: 100%;
-	min-height: 40px;
-}
-.if-upload-image-new{
-	height: 155px;
-	width: 155px;
-}
-
-
-.if-upload-thumbnail {
-    position:relative;
-    overflow:hidden;
-    border: 1px solid #dadada;
-    height: 155px;
-    text-align: center;
-}
-.upload-area-canvas .img-thumbnail{
-	box-shadow: none !important;
-	border: none !important;
-    max-height: 153px;
-    max-width: 153px;
-}
-
-.if-upload-caption {
-    position:absolute;
-    top:0;
-    right:0;
-    background:rgba(66, 139, 202, 0.75);
-    width:100%;
-    height:100%;
-    padding:2%;
-	padding-top: 15%;
-    display: none;
-    text-align:center;
-    color:#fff !important;
-    z-index:2;
-}
-
-.fileUpload {
+.if-upload .thumbs > *{
+	border: 1px solid #eee;
+	display: inline-block;
+	padding: 5px;
 	position: relative;
-	overflow: hidden;
-	padding: 2px;
-	height: 155px;
-	width: 155px;
-	border: 1px solid #ababab;
 }
-.fileUpload > .icon-upload{
-	margin: 0 9px;
-	font-size:150px;
-	height: 100%;
-	width: 100%;
-	color: #ababab;
+.if-upload .thumbs img{
+	height: 150px;
 }
-.fileUpload:hover > .icon-upload{
-	color: #878787;
-}
-.fileUpload input.upload {
+.if-upload .thumbs .controls{
 	position: absolute;
-	top: 0;
-	padding: 0;
-	font-size: 20px;
-	cursor: pointer;
-	opacity: 0;
-	filter: alpha(opacity=0);
-	width: 150px;
-	height: 100%;
-	left: 0;
-	right: 0;
-	margin: 0 auto;
+	top: 0; right: 0;
+	z-index: 1;
 }
+.if-upload .thumbs .controls i{
+	border:2px solid red;
+	cursor: pointer;
+	display: inline-block;
+	width: 50px;
+	height: 50px;
+}
+/***/
+.if-upload .hide{
+	visibility:hidden;
+	width:1px;
+	height: 1px;
+	position:absolute;
+	top:-1000;
+}
+/**/
