--- a/application/plugins/if.masterdetail/if.masterdetail.css
+++ b/application/plugins/if.masterdetail/if.masterdetail.css
@@ -65,5 +65,10 @@ MOVIL, RESPONSIVE
 {
 	#if-md-detail{
 		padding: 20px;
+		position: absolute;
+		top:0; left: 1000px;
+		z-index: 2;
+		width: 100%;
+		display: none;
 	}
 }
