--- a/application/plugins/if.upload/css.css
+++ b/application/plugins/if.upload/css.css
@@ -1,5 +1,5 @@
 .if-upload .thumbs > *{
-	border: 1px solid #d0d0d0;
+	border: 1px solid #E7E7E7;
 	display: inline-block;
 	padding: 5px;
 	position: relative;
