--- a/application/libraries/if/if.css
+++ b/application/libraries/if/if.css
@@ -1,11 +1,137 @@
-body{
+html, body{
 	font-family: Roboto, Arial;
+	height: 100%;
 }
 
-/***************************************
-GOOGLE MATERIAL DESIGNS (GMD))
-Se hace overwrite de algunas clases de Bootstrap para adaptar a GMD
-***************************************/
+/************************************************************
+IF + GOOGLE MATERIAL DESIGNS (GMD)
+************************************************************/
+
+/***** 
+HEADER
+Si se necesita un header, colocar logos y menus dentro de el.
+Automaticamente los centrara verticalmente.
+*****/
+.if_header{
+	position: relative;
+	height: 100px;
+}
+.if_header > *{
+	position: absolute;
+	top: 50% !important;
+	transform: translateY(-50%) !important;
+}
+.if_header.fixed{
+	position: fixed;
+	width: 100%;
+}
+.if_header_push{
+	display: block;
+	height: 100px; /** debe coincidir con el mismo height en if_header **/
+}
+
+/***** 
+HEADER COMPONENTS
+*****/
+.if_logo{
+	position: absolute;
+	top:5%; left: 5%;
+}
+.if_fab{ /** Floating action button **/
+	cursor: pointer;
+	font-style: normal;
+	font-weight: 100;
+	font-size: 24px; 
+	position: absolute;
+	top: 5%; right: 5%;
+	z-index: 8;
+	-webkit-box-shadow: 0px 10px 12px 0px #e0e0e0;
+	box-shadow: 0px 10px 12px 0px #e0e0e0;
+}
+
+/***** 
+DRAWER
+*****/
+.if_drawer{
+	background: #dcdcdc;
+	z-index: 16;
+	position: fixed;
+	width: 18em;
+	border-radius: 0;
+}
+.if_drawer ul, .if_drawer li{
+	list-style: none;
+	margin: 0; padding: 0;
+}
+.if_drawer li h2{
+	font-weight: 300;
+	font-size: 24px;
+	margin: 20px 0;
+}
+.if_drawer li > *{
+	color: #212121;
+	display: block;
+	font-size: 16px;
+	font-weight: 300;
+	padding: 15px 40px;
+	text-decoration: none;
+}
+.if_drawer a:hover{
+	background-color: #d0d0d0;
+}
+.if_drawer_push{
+	/* añadir a los paneles que van a ser empujados cuando el drawer abra */
+	position: relative;
+}
+
+
+/***** 
+ELEVACIONES
+Más info en Google Material Designs
+*****/
+.if_z_noshadow{
+	-webkit-box-shadow: none !important;
+	box-shadow: none !important;
+}
+.if_z_2{
+	z-index: 2;
+	-webkit-box-shadow: 0px 1px 2px 0px #e0e0e0;
+	box-shadow: 0px 1px 2px 0px #e0e0e0;
+}
+.if_z_4{
+	z-index: 4;
+	-webkit-box-shadow: 0px 2px 4px 0px #e0e0e0;
+	box-shadow: 0px 2px 4px 0px #e0e0e0;
+}
+.if_z_6{
+	z-index: 6;
+	-webkit-box-shadow: 0px 4px 6px 0px #e0e0e0;
+	box-shadow: 0px 4px 6px 0px #e0e0e0;
+}
+.if_z_8{
+	z-index: 8;
+	-webkit-box-shadow: 0px 6px 8px 0px #e0e0e0;
+	box-shadow: 0px 6px 8px 0px #e0e0e0;
+}
+.if_z_12{
+	z-index: 12;
+	-webkit-box-shadow: 0px 10px 12px 0px #e0e0e0;
+	box-shadow: 0px 10px 12px 0px #e0e0e0;
+}
+
+
+
+/************************************************************
+BOOTSTRAP 3.X OVERWRITE
+************************************************************/
+h1{
+	font-size: 4em;
+	font-weight: 100;
+}
+h2, h3{
+	font-weight: 300;
+	line-height: 1.45em;
+}
 .btn, .btn:focus, .btn:visited, .btn:hover{
 	color: #0066cc;
 }
@@ -24,11 +150,51 @@ Se hace overwrite de algunas clases de Bootstrap para adaptar a GMD
 	background-color: #dfdfe0;
 }
 .btn-default{
-	background-color: #f0f0f0;
+	background-color: #dcdcdc;
 	background-image: none;
 	border: 0;
 	text-shadow: none;
-	
+
 	-webkit-box-shadow: none;
-          box-shadow: none;
+	box-shadow: none;
+}
+.btn-lg{
+	font-size: 16px;
+	padding: 20px;
+}
+@media (max-width: 768px) {
+	h1{
+		font-size: 3em;
+	}
+	h2{
+		font-size: 24px;
+	}
+	h3{
+		font-size: 18px;
+	}
+}
+
+
+
+/************************************************************
+FUNCIONES DE UTILIDAD
+************************************************************/
+/** Marginado de secciones **/
+.if_section{
+	padding: 100px 0;
+}
+
+/** 100% height **/
+.if_height100{
+	height: 100%;
+}
+
+/** Centrado vertical **/
+.if_centerv_wrap{
+	position: relative;
+}
+.if_centerv{
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%) !important;
 }
