--- a/application/libraries/if/if.css
+++ b/application/libraries/if/if.css
@@ -53,7 +53,12 @@ HEADER COMPONENTS
 DRAWER
 *****/
 .if_drawer{
-	background: #dcdcdc;
+	background: #FAFAFA;
+	border: 0;
+	border-style: solid;
+	border-color: #e0e0e0;
+	border-left-width: 1px;
+	border-right-width: 1px;
 	z-index: 16;
 	position: fixed;
 	width: 18em;
@@ -77,7 +82,7 @@ DRAWER
 	text-decoration: none;
 }
 .if_drawer a:hover{
-	background-color: #d0d0d0;
+	background-color: #EAEAEA;
 }
 .if_drawer_push{
 	/* añadir a los paneles que van a ser empujados cuando el drawer abra */
@@ -146,4 +151,9 @@ FUNCIONES DE UTILIDAD
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%) !important;
+}
+
+/** Otros **/
+.margin0{
+	margin: 0;
 }
