--- a/application/libraries/if/if.css
+++ b/application/libraries/if/if.css
@@ -63,6 +63,9 @@ DRAWER
 	position: fixed;
 	width: 18em;
 	border-radius: 0;
+	
+	-webkit-box-shadow: -10px 4px 12px 0px rgba(0,0,0, 0.25);
+	box-shadow: -10px 4px 12px 0px rgba(0,0,0, 0.25);
 }
 .if_drawer ul, .if_drawer li{
 	list-style: none;
@@ -100,28 +103,28 @@ Más info en Google Material Designs
 }
 .if_z_2{
 	z-index: 2;
-	-webkit-box-shadow: 0px 1px 2px 0px #e0e0e0;
-	box-shadow: 0px 1px 2px 0px #e0e0e0;
+	-webkit-box-shadow: 0px 1px 2px 0px rgba(0,0,0, 0.25);
+	box-shadow: 0px 1px 2px 0px rgba(0,0,0, 0.25);
 }
 .if_z_4{
 	z-index: 4;
-	-webkit-box-shadow: 0px 2px 4px 0px #e0e0e0;
-	box-shadow: 0px 2px 4px 0px #e0e0e0;
+	-webkit-box-shadow: 0px 2px 4px 0px rgba(0,0,0, 0.25);
+	box-shadow: 0px 2px 4px 0px rgba(0,0,0, 0.25);
 }
 .if_z_6{
 	z-index: 6;
-	-webkit-box-shadow: 0px 4px 6px 0px #e0e0e0;
-	box-shadow: 0px 4px 6px 0px #e0e0e0;
+	-webkit-box-shadow: 0px 4px 6px 0px rgba(0,0,0, 0.25);
+	box-shadow: 0px 4px 6px 0px rgba(0,0,0, 0.25);
 }
 .if_z_8{
 	z-index: 8;
-	-webkit-box-shadow: 0px 6px 8px 0px #e0e0e0;
-	box-shadow: 0px 6px 8px 0px #e0e0e0;
+	-webkit-box-shadow: 0px 6px 8px 0px rgba(0,0,0, 0.25);
+	box-shadow: 0px 6px 8px 0px rgba(0,0,0, 0.25);
 }
 .if_z_12{
 	z-index: 12;
-	-webkit-box-shadow: 0px 10px 12px 0px #e0e0e0;
-	box-shadow: 0px 10px 12px 0px #e0e0e0;
+	-webkit-box-shadow: 0px 10px 12px 0px rgba(0,0,0, 0.25);
+	box-shadow: 0px 10px 12px 0px rgba(0,0,0, 0.25);
 }
 
 
