--- a/application/templates/material_design/css/if.bootstrap.theme.materialdesign.css
+++ b/application/templates/material_design/css/if.bootstrap.theme.materialdesign.css
@@ -13,7 +13,7 @@ Automaticamente los centrara verticalmente.
 *****/
 .if_header{
 	position: relative;
-	height: 100px;
+	height: 90px;
 }
 .if_header > *{
 	position: absolute;
@@ -26,7 +26,7 @@ Automaticamente los centrara verticalmente.
 }
 .if_header_push{
 	display: block;
-	height: 100px; /** debe coincidir con el mismo height en if_header **/
+	height: 90px; /** debe coincidir con el mismo height en if_header **/
 }
 
 /***** 
@@ -63,8 +63,6 @@ DRAWER
 	width: 18em;
 	border-radius: 0;
 	
-	-webkit-box-shadow: -10px 4px 12px 0px rgba(0,0,0, 0.25);
-	box-shadow: -10px 4px 12px 0px rgba(0,0,0, 0.25);
 }
 .if_drawer ul, .if_drawer li{
 	list-style: none;
@@ -100,30 +98,34 @@ Más info en Google Material Designs
 	-webkit-box-shadow: none !important;
 	box-shadow: none !important;
 }
+.if_z_inset{
+	-webkit-box-shadow: inset 0 -5px 8px rgba(0,0,0, 0.10);
+	box-shadow: inset 0 -5px 8px rgba(0,0,0, 0.10);
+}
 .if_z_2{
-	z-index: 2;
-	-webkit-box-shadow: 0px 1px 2px 0px rgba(0,0,0, 0.25);
-	box-shadow: 0px 1px 2px 0px rgba(0,0,0, 0.25);
+	z-index:2;
+	-webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0, 0.25);
+	box-shadow: 0px 1px 3px 0px rgba(0,0,0, 0.25);
 }
 .if_z_4{
-	z-index: 4;
-	-webkit-box-shadow: 0px 2px 4px 0px rgba(0,0,0, 0.25);
-	box-shadow: 0px 2px 4px 0px rgba(0,0,0, 0.25);
+	z-index:4;
+	-webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0, 0.25);
+	box-shadow: 0px 2px 5px 0px rgba(0,0,0, 0.25);
 }
 .if_z_6{
-	z-index: 6;
-	-webkit-box-shadow: 0px 4px 6px 0px rgba(0,0,0, 0.25);
-	box-shadow: 0px 4px 6px 0px rgba(0,0,0, 0.25);
+	z-index:6;
+	-webkit-box-shadow: 0px 4px 7px 0px rgba(0,0,0, 0.25);
+	box-shadow: 0px 4px 7px 0px rgba(0,0,0, 0.25);
 }
 .if_z_8{
-	z-index: 8;
-	-webkit-box-shadow: 0px 6px 8px 0px rgba(0,0,0, 0.25);
-	box-shadow: 0px 6px 8px 0px rgba(0,0,0, 0.25);
+	z-index:8;
+	-webkit-box-shadow: 0px 6px 9px 0px rgba(0,0,0, 0.25);
+	box-shadow: 0px 6px 9px 0px rgba(0,0,0, 0.25);
 }
 .if_z_12{
-	z-index: 12;
-	-webkit-box-shadow: 0px 10px 12px 0px rgba(0,0,0, 0.25);
-	box-shadow: 0px 10px 12px 0px rgba(0,0,0, 0.25);
+	z-index:12;
+	-webkit-box-shadow: 0px 10px 13px 0px rgba(0,0,0, 0.25);
+	box-shadow: 0px 10px 13px 0px rgba(0,0,0, 0.25);
 }
 
 
