Cambios en if.avatar

--- a/application/plugins/if.avatar/css.css
+++ b/application/plugins/if.avatar/css.css
@@ -1,3 +1,8 @@
+#ifAvatar{
+	width: 480px;
+	height: 250px;
+	
+}
 #ifAvatar .avatar img{
 	background: #fff;
 	border: 1px solid #e0e0e3;
@@ -12,7 +17,8 @@
 }
 
 /** icon **/
-#ifAvatar #msg i{
+#ifAvatar #msg i,
+#ifAvatar #msgcam i{
 	background: url('uploading.gif') no-repeat 0 50%;
 	display: block;
 	float: left;
@@ -22,7 +28,8 @@
 #ifAvatar #msg i.uploading{
 	
 }
-#ifAvatar #msg i.success{
+#ifAvatar #msg i.success,
+#ifAvatar #msgcam i.success{
 	background-image: url('tick.png');
 }
 
@@ -59,7 +66,8 @@ CAM HTML5
 	width: 150px;
 	height: 150px;
 	position: absolute;
-	left: 25px;
+	left: 75px;
+	background-color: transparent;
 	border-left: white dashed 1px;
 	border-right: white dashed 1px;
 }
