--- a/application/plugins/if.layer/css.css
+++ b/application/plugins/if.layer/css.css
@@ -7,6 +7,7 @@
 	height: 100%;
 	position: absolute;
 	top:0;left:0;
+	overflow:auto;
 
 	-webkit-box-shadow: 2px 0px 15px 0px rgba(0,0,0,.5);
 	box-shadow: 2px 0px 15px 0px  rgba(0,0,0,.5);
