--- a/application/plugins/if.masterdetail/if.masterdetail.css
+++ b/application/plugins/if.masterdetail/if.masterdetail.css
@@ -31,7 +31,7 @@ BOOTGRID OVERWRITE
 .bootgrid-footer{
 	background-color: #f0f0f0;
 	margin: 0;
-	padding: 5px;
+	padding: 4px;
 }
 .bootgrid-header{
 }
@@ -54,6 +54,10 @@ BOOTGRID OVERWRITE
 	overflow: auto;
 }
 .bootgrid-table{
+	margin: 0;
+}
+#if-grid-header .btn, 
+#if-grid-header .input-group-btn .btn{
 	margin: 0;
 }
 
