--- a/application/plugins/if.modal/css.css
+++ b/application/plugins/if.modal/css.css
@@ -29,3 +29,8 @@
 	margin: 20px -20px -10px 0;
 	text-align: right;
 }
+.if_modal .if_modal_loading{
+	background: url('load.gif') no-repeat 50% 100%;
+	height: 62px;
+	width: 100%;
+}
