--- a/application/plugins/if.modal/css.css
+++ b/application/plugins/if.modal/css.css
@@ -24,6 +24,7 @@
 .if_modal .if_modal_content{
 	font-size: 14px;
 	margin-bottom: 10px;
+	position: relative;
 }
 .if_modal .if_modal_btns {
 	margin: 20px -20px -10px 0;
