--- a/application/templates/material_design/css/if.bootstrap.theme.materialdesign.css
+++ b/application/templates/material_design/css/if.bootstrap.theme.materialdesign.css
@@ -11,6 +11,15 @@ html, body{
 	height: 100%;
 }
 
+/************************************************************
+NECESARIAS POR IF
+************************************************************/
+.loading{
+	background: transparent url('../img/loading.gif') no-repeat 50% 50%;
+	min-height: 40px;
+	min-width: 40px;
+}
+
 /***** 
 HEADER
 Si se necesita un header, colocar logos y menus dentro de el.
